--- a/.env
+++ b/.env
@@ -1,5 +1,52 @@
-MYSQL_ROOT_PASSWORD=root_password
-MYSQL_DATABASE=test_db
-MYSQL_USER=test_user
-MYSQL_PASSWORD=test_password
-SLEEP_DURATION=10
+# Kafka
+KAFKA_BROKER=kafka:9092
+
+# MySQL
+MYSQL_DB_HOST_NAME=mysql
+MYSQL_DB_HOST_PORT=3306
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=data_sources_db
+MYSQL_USER=my_user
+MYSQL_PASSWORD=my_password
+
+# MongoDB
+MONGO_DB_HOST_NAME=mongo
+MONGO_DB_HOST_PORT=27017
+MONGO_DB_NAME=trend_db
+MONGO_INITDB_ROOT_USERNAME=mongoadmin
+MONGO_INITDB_ROOT_PASSWORD=strongpassword123
+
+# PostgreSQL
+POSTGRES_DB_HOST_NAME=postgresql
+POSTGRES_DB_HOST_PORT=5432
+POSTGRES_DB_NAME=trend_db
+POSTGRES_USER=postgresadmin
+POSTGRES_PASSWORD=securepassword456
+
+# Cassandra
+CASSANDRA_CLUSTER_NAME=trend_cluster
+
+# InfluxDB
+INFLUXDB_DB=trend_metrics_db
+INFLUXDB_ADMIN_USER=influxadmin
+INFLUXDB_ADMIN_PASSWORD=influxpassword789
+
+# Neo4j
+NEO4J_PASSWORD=neo4jpassword321
+
+# CouchDB
+COUCHDB_USER=couchadmin
+COUCHDB_PASSWORD=couchpassword654
+
+# Domain (pgAdmin için)
+DOMAIN=autoContentLabs.com
+
+# Genel tekrar ayarları
+MYSQL_RETRIES=30
+MONGODB_RETRIES=15
+POSTGRES_RETRIES=10
+
+# Bekleme süreleri
+SLEEP_DURATION=60
+API_FETCH_DELAY=300000
+DOMAIN_FETCH_DELAY=10000
