--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+version: '3.8'
+
 services:
 
+    # Kafka ve Kafdrop
     kafka:
         image: apache/kafka:latest
         environment:
@@ -34,6 +37,7 @@ services:
         depends_on:
             - kafka
 
+    # Veri Tabanları
     mysql:
         image: mysql:latest
         environment:
@@ -89,7 +93,7 @@ services:
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
             ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-            ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_DB_HOST_NAME}:${MONGO_DB_HOST_PORT}/
+            ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/
             ME_CONFIG_BASICAUTH: false
         ports:
             - "8082:8081"
@@ -224,6 +228,26 @@ services:
         networks:
             - my_shared_network
 
+    # Monitoring Servisleri
+    prometheus:
+        image: prom/prometheus
+        ports:
+            - "9090:9090"
+        volumes:
+            - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+        networks:
+            - my_shared_network
+
+    grafana:
+        image: grafana/grafana
+        ports:
+            - "3000:3000"
+        networks:
+            - my_shared_network
+        depends_on:
+            - prometheus
+
+    # Data Collection Servisleri
     data-collection-python:
         build:
             context: ./data-collection-python
