--- a/.env
+++ b/.env
@@ -1,52 +1,48 @@
-# Kafka
+# Message Brokers
 KAFKA_BROKER=kafka:9092
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
 
-# MySQL
-MYSQL_DB_HOST_NAME=mysql
-MYSQL_DB_HOST_PORT=3306
-MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=data_sources_db
-MYSQL_USER=my_user
-MYSQL_PASSWORD=my_password
+# Databases
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=mydatabase
+MYSQL_USER=myuser
+MYSQL_PASSWORD=mypassword
 
-# MongoDB
-MONGO_DB_HOST_NAME=mongo
-MONGO_DB_HOST_PORT=27017
-MONGO_DB_NAME=trend_db
-MONGO_INITDB_ROOT_USERNAME=mongoadmin
-MONGO_INITDB_ROOT_PASSWORD=strongpassword123
+MONGO_INITDB_ROOT_USERNAME=mongo_user
+MONGO_INITDB_ROOT_PASSWORD=mongo_password
 
-# PostgreSQL
-POSTGRES_DB_HOST_NAME=postgresql
-POSTGRES_DB_HOST_PORT=5432
-POSTGRES_DB_NAME=trend_db
-POSTGRES_USER=postgresadmin
-POSTGRES_PASSWORD=securepassword456
+POSTGRES_USER=postgres_user
+POSTGRES_PASSWORD=postgres_password
+POSTGRES_DB_NAME=postgres_db
 
-# Cassandra
-CASSANDRA_CLUSTER_NAME=trend_cluster
+CASSANDRA_CLUSTER_NAME=my_cassandra_cluster
+
+# ClickHouse
+CLICKHOUSE_USER=default
+CLICKHOUSE_PASSWORD=default
 
 # InfluxDB
-INFLUXDB_DB=trend_metrics_db
-INFLUXDB_ADMIN_USER=influxadmin
-INFLUXDB_ADMIN_PASSWORD=influxpassword789
+INFLUXDB_DB=my_influx_db
+INFLUXDB_ADMIN_USER=influx_admin
+INFLUXDB_ADMIN_PASSWORD=influx_password
 
 # Neo4j
-NEO4J_PASSWORD=neo4jpassword321
+NEO4J_PASSWORD=neo4j_password
 
 # CouchDB
-COUCHDB_USER=couchadmin
-COUCHDB_PASSWORD=couchpassword654
+COUCHDB_USER=couch_user
+COUCHDB_PASSWORD=couch_password
 
-# Domain (pgAdmin için)
-DOMAIN=autoContentLabs.com
+# Monitoring
+DOMAIN=mydomain.com
 
-# Genel tekrar ayarları
-MYSQL_RETRIES=30
-MONGODB_RETRIES=15
-POSTGRES_RETRIES=10
-
-# Bekleme süreleri
+# Sleep Duration for Data Collection
 SLEEP_DURATION=60
 API_FETCH_DELAY=300000
 DOMAIN_FETCH_DELAY=10000
+
+# Data Collection 
+MYSQL_RETRIES=30
+MONGODB_RETRIES=15
+POSTGRES_RETRIES=10
